kubernetes/applications/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: portfolio
  ports:
    - { name: http, port: 3000, targetPort: http, protocol: TCP }
